--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    
+    <script src="./JS/jquery.inview.js"></script>
+    
 
     <style>
 
@@ -43,13 +46,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item mt-3 mt-md-0 ml-md-4 ">
-              <a>Skills & Education</a>
+              <a id="ske" onclick="skeFunc()">Skills & Education</a>
             </li>
             <li class="nav-item mt-3 mt-md-0 ml-md-5">
-              <a>Certifications</a>
+              <a id="crt" onclick="crtFunc()">Certifications</a>
             </li>
             <li class="nav-item mt-3 mt-md-0 ml-md-5">
-              <a>Projects</a>
+              <a id="prj" onclick="prjFunc()">Projects</a>
             </li>
 
           </ul>
@@ -271,9 +274,13 @@
   </center>
 
   
+
+  
   
   </footer>
 <!-- Footer -->
 
+
+<script src="./JS/Portfolio.js"></script>
 </body>
 </html>
