--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <a href="https://wrkspace.herokuapp.com/workspace" target="_blank"><img style="margin-top: -70px;margin-left: 190px;" src="./Images/link-solid.svg" width="20px" height="20px" alt=""></a>
                 <h5 style="margin-top: -22px;">Node.js</h5>
                 <p class="mt-3 mb-3">A website made for freelancers to collaborate and work on exciting projects as a team.</p>
-                <a href="#" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/WorkSpace__Node.js" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
@@ -232,7 +232,7 @@
                 <p class="mt-2" style="font-weight: bold;font-size:1.35em;color:blue">E-Commerce website analysis</p>
                 <h5 style="margin-top: -11px;">Data Science</h5>
                 <p class="mt-3 mb-3">Detailed analysis of E-commerce platform users usage pattern performed using advanced python libraries for data science.</p>
-                <a href="#" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/E-commerce" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
@@ -244,7 +244,7 @@
                 <h4 class="mt-2" style="font-weight: bold;color:blue"> BrainTrainer </h4>
                 <h5>Android application</h5>
                 <p class="mt-3 mb-3">A MCQ math quiz game with randomly generated questions and answers to sharpen your brain.</p>
-                <a href="#" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <a href="https://github.com/sagarparker/BrainTrainer__Android-app" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
