--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 
             <div class="row mt-4">
               <div class="col-md-6 col-12 SK" >
-                <h5>HTML/CSS</h5>
+                <h5>HTML/CSS/BOOTSTRAP</h5>
                 <hr>
                 <hr style="background-color: blue;margin-top:-31px" align="left" width='90%'>
 
               </div>
               <div class="col-md-6 col-12 SK" >
-                <h5>Bootstrap</h5>
+                <h5>MongoDB/PostgreSQl</h5>
                 <hr>
                 <hr style="background-color: blue;margin-top:-31px" align="left" width='90%'>
               </div>
@@ -150,7 +150,7 @@
                
               </div>
               <div class="col-md-6 col-12 SK" >
-                <h5>Java</h5>
+                <h5>Angular</h5>
                 <hr>
                 <hr style="background-color: blue;margin-top:-31px" align="left" width='70%'>
 
