--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
 
             <div class="row mt-4">
               <div class="col-md-6 col-12 SK" >
-                <h5>HTML/CSS/BOOTSTRAP</h5>
+                <h5>HTML / CSS / Bootstrap</h5>
                 <hr>
                 <hr style="background-color: blue;margin-top:-31px" align="left" width='90%'>
 
               </div>
               <div class="col-md-6 col-12 SK" >
-                <h5>MongoDB/PostgreSQl</h5>
+                <h5>MongoDB / PostgreSQL</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='90%'>
+                <hr style="background-color: blue;margin-top:-31px" align="left" width='70%'>
               </div>
             </div>
 
@@ -152,7 +152,7 @@
               <div class="col-md-6 col-12 SK" >
                 <h5>Angular</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='70%'>
+                <hr style="background-color: blue;margin-top:-31px" align="left" width='75%'>
 
               </div>
             </div>
@@ -204,8 +204,10 @@
           <div class="col-12 col-md-6 mt-1">
             <img src="./Images/java.jpg" width="100%" height="92.5%" alt="" class="mt-3">
           </div>
+          <a href="./certifications.html" target="_blank" class="mt-2 ml-5 certificationslink">+ Click to checkout all my certifications</a>
         </div>
       </div>
+      
     </div>
 
     <div id="div4">
@@ -239,7 +241,7 @@
 
           <div class="col-12 col-md-4">
             <div class="prjCard">
-              <img src="https://www.elsetge.cat/myimg/f/74-740860_math-wallpaper-background.jpg" width="100%" height="180px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/btc.jpg" width="100%" height="180px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:blue"> BrainTrainer </h4>
                 <h5>Android application</h5>
