--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="col-12 col-md-6 mt-1">
             <img src="./Images/java.jpg" width="100%" height="92.5%" alt="" class="mt-3">
           </div>
-          <a href="./certifications.html" target="_blank" class="mt-2 ml-5 certificationslink">+ Click to checkout all my certifications</a>
+          <a href="./certifications.html" style="color:black;text-decoration: none;" target="_blank" class="mt-2 ml-5 certificationslink">+ Click to checkout all my certifications</a>
         </div>
       </div>
       
