--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <style>
 
       .SK{
-        padding-right: 130px;
+        padding-right: 7vw;
       }
 
       @media screen and (max-width:600px){
@@ -175,12 +175,11 @@
             <div class="row mt-5 " >
               <div class="col-md-6 col-12" >
                 <h4>BSc - Computer Science</h4>
-                <h5 style="color:grey">Ramnarain Ruia College ( 2017 - 2020 ) </h5>
+                <h5 style="color:grey">Ramnarain Ruia College ( 2017 - 2020 )</h5>
               </div>
               <div class="col-md-6 col-12 mt-md-0 mt-5" >
                 <h4>HSC</h4>
-                <h5 style="color:grey">Ramnivas Ruia College ( 2016 - 2017 ) </h5>
-
+                <h5 style="color:grey">Ramnivas Ruia College ( 2016 - 2017 )</h5>
               </div>
             </div>
         </div>
@@ -204,10 +203,9 @@
           <div class="col-12 col-md-6 mt-1">
             <img src="./Images/java.jpg" width="100%" height="92.5%" alt="" class="mt-3">
           </div>
-          <a href="./certifications.html" style="color:black;text-decoration: none;" target="_blank" class="mt-2 ml-5 certificationslink">+ Click to checkout all my certifications</a>
+          <a href="./certifications.html" style="color:black;text-decoration: none;" target="_blank" class="mt-2 certificationslink">+ Click to checkout all my certifications</a>
         </div>
       </div>
-      
     </div>
 
     <div id="div4">
