--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <p>Contact : +91 9137427570</p>
   </center>
   <center>
-    <p>Email : <a href="sagar8parker@gmail.com">sagar8parker@gmail.com</a></p>
+    <p>Email : sagar8parker@gmail.com</p>
   </center>
 
   
