Resume download link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <a href="https://github.com/sagarparker" target="_blank" style="text-decoration: none;">
                             <img src="./Images/github-brands.svg" class="mt-3 ml-4" height="6%" width="6%" alt="">
                         </a>
-                        <a href="resume.html" target="_blank" style="text-decoration: none;">
+                        <a href="./Resume.pdf" download="Sagar Parker Resume" style="text-decoration: none;">
                             <img src="./Images/file-solid.svg" class="mt-3 ml-4" height="4%" width="4%" alt="">
                         </a>
                         
