--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <div class="row mt-4">
               <div class="col-md-6 col-12 SK" >
-                <h5>Data Science</h5>
+                <h5>AWS / DigitalOcean </h5>
                 <hr>
                 <hr style="background-color: blue;margin-top:-31px" align="left" width='60%'>
               </div>
@@ -174,12 +174,12 @@
 
             <div class="row mt-5 " >
               <div class="col-md-6 col-12" >
-                <h4>BSc - Computer Science</h4>
-                <h5 style="color:grey">Ramnarain Ruia College ( 2017 - 2020 )</h5>
+                <h4>M.Sc - Computer Science</h4>
+                <h5 style="color:grey">G.N Khalsa ( 2020 - Present )</h5>
               </div>
               <div class="col-md-6 col-12 mt-md-0 mt-5" >
-                <h4>HSC</h4>
-                <h5 style="color:grey">Ramnivas Ruia College ( 2016 - 2017 )</h5>
+                <h4>B.Sc - Computer Science</h4>
+                <h5 style="color:grey">Ruia College ( 2017 - 2020 )</h5>
               </div>
             </div>
         </div>
