Update to the resume

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <a href="https://github.com/sagarparker" style="text-decoration: none;">
                 <img src="./Images/github-brands.svg" class="mt-2 ml-4" height="12%" width="12%" alt="">
             </a>
-            <a href="resume.html" target="_blank" style="text-decoration: none;">
+            <a href="./Resume.pdf" download="Sagar Parker Resume" style="text-decoration: none;">
                 <img src="./Images/file-solid.svg" class="mt-2 ml-4" height="8%" width="8%" alt="">
             </a>
 
