Update to the Resume

--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
             <div class="row mt-5 " >
               <div class="col-md-6 col-12" >
                 <h4>M.Sc - Computer Science</h4>
-                <h5 style="color:grey">G.N Khalsa ( 2020 - Present )</h5>
+                <h5 style="color:grey">Ramnarain Ruia College ( 2020 - Present )</h5>
               </div>
               <div class="col-md-6 col-12 mt-md-0 mt-5" >
                 <h4>B.Sc - Computer Science</h4>
-                <h5 style="color:grey">Ruia College ( 2017 - 2020 )</h5>
+                <h5 style="color:grey">Ramnarain Ruia College ( 2017 - 2020 )</h5>
               </div>
             </div>
         </div>
