--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="row mt-5 " >
               <div class="col-md-6 col-12" >
                 <h4>M.Sc - Computer Science</h4>
-                <h5 style="color:grey">Ramnarain Ruia College ( 2020 - Present )</h5>
+                <h5 style="color:grey">Ramnarain Ruia College ( 2020 - 2022 )</h5>
               </div>
               <div class="col-md-6 col-12 mt-md-0 mt-5" >
                 <h4>B.Sc - Computer Science</h4>
@@ -214,11 +214,11 @@
 
           <div class="col-12 col-md-4 ">
             <div class="prjCard">
-              <img src="./Images/ws.JPG" width="100%" height="180px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/ws.JPG" width="100%" height="200px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:blue"> WorkSpace.com </h4>
-                <a href="https://wrkspace.herokuapp.com/workspace" target="_blank"><img style="margin-top: -70px;margin-left: 190px;" src="./Images/link-solid.svg" width="20px" height="20px" alt=""></a>
-                <h5 style="margin-top: -22px;">Node.js</h5>
+                <a href="https://wrkspace.herokuapp.com/workspace" target="_blank"><img style="margin-top: -65px;margin-left: 190px;" src="./Images/link-solid.svg" width="20px" height="20px" alt=""></a>
+                <h5 style="font-weight: 600;margin-top: -24px;">Node.js web app</h5>
                 <p class="mt-3 mb-3">A website made for freelancers to collaborate and work on exciting projects as a team.</p>
                 <a href="https://github.com/sagarparker/WorkSpace__Node.js" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
@@ -227,27 +227,29 @@
 
           <div class="col-12 col-md-4">
             <div class="prjCard">
-              <img src="./Images/ecom.JPG" width="100%" height="180px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/voting.jpg" width="100%" height="200px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
-                <p class="mt-2" style="font-weight: bold;font-size:1.35em;color:blue">E-Commerce website analysis</p>
-                <h5 style="margin-top: -11px;">Data Science</h5>
-                <p class="mt-3 mb-3">Detailed analysis of E-commerce platform users usage pattern performed using advanced python libraries for data science.</p>
-                <a href="https://github.com/sagarparker/E-commerce" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <h4 class="mt-2" style="font-weight: bold;color:blue"> VoterChain.com </h4>
+                <h5 style="font-weight: 600;">Blockchain</h5>
+                <p class="mt-3 mb-3">A decentralized voting system made by implementing Blockchain,Node.js,Socket.io and React.</p>
+                <a href="https://github.com/sagarparker/VoterChain" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
 
           <div class="col-12 col-md-4">
             <div class="prjCard">
-              <img src="./Images/btc.jpg" width="100%" height="180px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/ecom.JPG" width="100%" height="200px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
-                <h4 class="mt-2" style="font-weight: bold;color:blue"> BrainTrainer </h4>
-                <h5>Android application</h5>
-                <p class="mt-3 mb-3">A MCQ math quiz game with randomly generated questions and answers to sharpen your brain.</p>
-                <a href="https://github.com/sagarparker/BrainTrainer__Android-app" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <h4 class="mt-2" style="font-weight: bold;color:blue">E-Commerce analysis</h4>
+                <h5 style="font-weight: 600;">Data Science</h5>
+                <p class="mt-3 mb-3">Detailed analysis of E-commerce platform users usage pattern performed using advanced python libraries for data science.</p>
+                <a href="https://github.com/sagarparker/E-commerce" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
+
+
 
         </div>
       </div>
