--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
           <div class="col-12 col-md-4 ">
             <div class="prjCard">
-              <img src="./Images/ws.JPG" width="100%" height="200px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/ws.JPG" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:blue"> WorkSpace.com </h4>
                 <a href="https://wrkspace.herokuapp.com/workspace" target="_blank"><img style="margin-top: -65px;margin-left: 190px;" src="./Images/link-solid.svg" width="20px" height="20px" alt=""></a>
@@ -227,7 +227,7 @@
 
           <div class="col-12 col-md-4">
             <div class="prjCard">
-              <img src="./Images/voting.jpg" width="100%" height="200px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/voting.jpg" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:blue"> VoterChain.com </h4>
                 <h5 style="font-weight: 600;">Blockchain</h5>
@@ -239,12 +239,12 @@
 
           <div class="col-12 col-md-4">
             <div class="prjCard">
-              <img src="./Images/ecom.JPG" width="100%" height="200px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/sentiment1.jpg" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
-                <h4 class="mt-2" style="font-weight: bold;color:blue">E-Commerce analysis</h4>
-                <h5 style="font-weight: 600;">Data Science</h5>
-                <p class="mt-3 mb-3">Detailed analysis of E-commerce platform users usage pattern performed using advanced python libraries for data science.</p>
-                <a href="https://github.com/sagarparker/E-commerce" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <h4 class="mt-2" style="font-weight: bold;color:blue">Sentiment analysis</h4>
+                <h5 style="font-weight: 600;">NLP - Data Science </h5>
+                <p class="mt-3 mb-3">Detailed sentiment analysis of Reddit posts done with Flask,React and advanced Python libraries for data science .</p>
+                <a href="https://github.com/sagarparker/RedditSentimentAnalysis" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
