--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-6" style="padding-left: 8%;" >
                     
                         <p style="font-size: 3.7vw;font-weight: bold;margin-top: 25%;">Hello,I'm Sagar Parker.</p>
-                        <p style="font-size: 2.3vw;margin-top:-10px">A <span style="color: rgb(3, 3, 218);">Web-developer</span> and an <br>aspiring Data scientist.</p>
+                        <p style="font-size: 2.3vw;margin-top:-10px"><span style="color: rgb(3, 3, 218);"> Full-stack developer</span></p>
                         <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" target="_blank" style="text-decoration: none;" >
                             <img src="./Images/linkedin-brands.svg" class="mt-3" height=6%" width="6%" alt="">
                         </a>
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col-12 p-3">
             <p style="font-size: 14vw;font-weight: bold;margin-top: 35%;">Hello,I'm Sagar Parker.</p>
-            <p style="font-size: 8vw;margin-top:-10px">A <span style="color: rgb(3, 3, 218);">Web-developer</span> and an aspiring Data scientist.</p>
+            <p style="font-size: 8vw;margin-top:-10px"><span style="color: rgb(3, 3, 218);">Full-stack developer</span></p>
             <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" style="text-decoration: none;" >
               <img src="./Images/linkedin-brands.svg" class="mt-2" height=11%" width="11%" alt="">
             </a>
@@ -123,7 +123,7 @@
               </div>
   
               <div class="col-md-6 col-12 SK" >
-                <h5>Angular / React</h5>
+                <h5>Angular / React / React Native</h5>
                 <hr>
                 <hr style="background-color: blue;margin-top:-31px" align="left" width='75%'>
 
