--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <div class="col-6" style="padding-left: 8%;" >
                     
                         <p style="font-size: 3.7vw;font-weight: bold;margin-top: 25%;">Hello,I'm Sagar Parker.</p>
-                        <p style="font-size: 2.3vw;margin-top:-10px"><span style="color: rgb(3, 3, 218);"> Full-stack developer</span></p>
+                        <p style="font-size: 2.3vw;margin-top:-10px"><span style="color: #4d5bff"> Full-stack developer</span></p>
                         <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" target="_blank" style="text-decoration: none;" >
-                            <img src="./Images/linkedin-brands.svg" class="mt-3" height=6%" width="6%" alt="">
+                            <img src="./Images/linkedin-brands.svg" style="color: #4d5bff!important" class="mt-3" height=6%" width="6%" alt="">
                         </a>
                         <a href="https://github.com/sagarparker" target="_blank" style="text-decoration: none;">
                             <img src="./Images/github-brands.svg" class="mt-3 ml-4" height="6%" width="6%" alt="">
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col-12 p-3">
             <p style="font-size: 14vw;font-weight: bold;margin-top: 35%;">Hello,I'm Sagar Parker.</p>
-            <p style="font-size: 8vw;margin-top:-10px"><span style="color: rgb(3, 3, 218);">Full-stack developer</span></p>
+            <p style="font-size: 8vw;margin-top:-10px"><span style="color: #4d5bff;">Full-stack developer</span></p>
             <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" style="text-decoration: none;" >
               <img src="./Images/linkedin-brands.svg" class="mt-2" height=11%" width="11%" alt="">
             </a>
@@ -119,13 +119,13 @@
               <div class="col-md-6 col-12 SK" >
                 <h5>Node.js</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='90%'>
+                <hr style="background-color: #4d5bff;margin-top:-31px" align="left" width='90%'>
               </div>
   
               <div class="col-md-6 col-12 SK" >
                 <h5>Angular / React / React Native</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='75%'>
+                <hr style="background-color: #4d5bff;margin-top:-31px" align="left" width='75%'>
 
               </div>
             </div>
@@ -134,12 +134,12 @@
               <div class="col-md-6 col-12 SK" >
                 <h5>HTML / CSS / Bootstrap</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='90%'>
+                <hr style="background-color: #4d5bff;margin-top:-31px" align="left" width='90%'>
               </div>
               <div class="col-md-6 col-12 SK" >
                 <h5>MongoDB / PostgreSQL</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='70%'>
+                <hr style="background-color: #4d5bff;margin-top:-31px" align="left" width='70%'>
               </div>
             </div>
 
@@ -147,14 +147,14 @@
               <div class="col-md-6 col-12 SK" >
                 <h5>Javascript</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='70%'>
+                <hr style="background-color: #4d5bff;margin-top:-31px" align="left" width='70%'>
                
               </div>
 
               <div class="col-md-6 col-12 SK" >
                 <h5>UI/UX</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='90%'>
+                <hr style="background-color: #4d5bff;margin-top:-31px" align="left" width='90%'>
 
               </div>
             </div>
@@ -163,12 +163,12 @@
               <div class="col-md-6 col-12 SK" >
                 <h5>AWS / DigitalOcean </h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='60%'>
+                <hr style="background-color: #4d5bff;margin-top:-31px" align="left" width='60%'>
               </div>
               <div class="col-md-6 col-12 SK" >
                 <h5>Python</h5>
                 <hr>
-                <hr style="background-color: blue;margin-top:-31px" align="left" width='80%'>
+                <hr style="background-color: #4d5bff;margin-top:-31px" align="left" width='80%'>
               </div>
             </div>
 
@@ -216,7 +216,7 @@
             <div class="prjCard">
               <img src="./Images/ws.JPG" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
-                <h4 class="mt-2" style="font-weight: bold;color:blue"> WorkSpace.com </h4>
+                <h4 class="mt-2" style="font-weight: bold;color:#4d5bff"> WorkSpace.com </h4>
                 <a href="https://wrkspace.herokuapp.com/workspace" target="_blank"><img style="margin-top: -65px;margin-left: 190px;" src="./Images/link-solid.svg" width="20px" height="20px" alt=""></a>
                 <h5 style="font-weight: 600;margin-top: -24px;">Node.js web app</h5>
                 <p class="mt-3 mb-3">A website made for freelancers to collaborate and work on exciting projects as a team.</p>
@@ -229,7 +229,7 @@
             <div class="prjCard">
               <img src="./Images/voting.jpg" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
-                <h4 class="mt-2" style="font-weight: bold;color:blue"> VoterChain.com </h4>
+                <h4 class="mt-2" style="font-weight: bold;color:#4d5bff"> VoterChain.com </h4>
                 <h5 style="font-weight: 600;">Blockchain</h5>
                 <p class="mt-3 mb-3">A decentralized voting system made by implementing Blockchain,Node.js,Socket.io and React.</p>
                 <a href="https://github.com/sagarparker/VoterChain" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
@@ -241,7 +241,7 @@
             <div class="prjCard">
               <img src="./Images/sentiment1.jpg" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
-                <h4 class="mt-2" style="font-weight: bold;color:blue">Sentiment analysis</h4>
+                <h4 class="mt-2" style="font-weight: bold;color:#4d5bff">Sentiment analysis</h4>
                 <h5 style="font-weight: 600;">NLP - Data Science </h5>
                 <p class="mt-3 mb-3">Detailed sentiment analysis of Reddit posts done with Flask,React and advanced Python libraries for data science .</p>
                 <a href="https://github.com/sagarparker/RedditSentimentAnalysis" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
