Update to the skills section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="conainer">
             <div class="row">
               <div class="col-md-6 col-12 SK" >
-                <h5>Node.js</h5>
+                <h5>Node.js / Flutter</h5>
                 <hr>
                 <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='90%'>
               </div>
@@ -145,7 +145,7 @@
               <div class="col-md-6 col-12 SK" >
                 <h5>Javascript</h5>
                 <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='70%'>
+                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='90%'>
                
               </div>
 
@@ -164,9 +164,9 @@
                 <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='60%'>
               </div>
               <div class="col-md-6 col-12 SK" >
-                <h5>Python</h5>
+                <h5>Python / Dart</h5>
                 <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='80%'>
+                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='70%'>
               </div>
             </div>
 
