Update to the skills section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="conainer">
             <div class="row">
               <div class="col-md-6 col-12 SK" >
-                <h5>Node.js / Flutter</h5>
+                <h5>Node.js / Javascript</h5>
                 <hr>
                 <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='90%'>
               </div>
@@ -143,7 +143,7 @@
 
             <div class="row mt-4 ">
               <div class="col-md-6 col-12 SK" >
-                <h5>Javascript</h5>
+                <h5>Flutter / Dart</h5>
                 <hr>
                 <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='90%'>
                
@@ -164,7 +164,7 @@
                 <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='60%'>
               </div>
               <div class="col-md-6 col-12 SK" >
-                <h5>Python / Dart</h5>
+                <h5>Python</h5>
                 <hr>
                 <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='70%'>
               </div>
