Update to certification and bug fixes

--- a/certifications.html
+++ b/certifications.html
@@ -20,8 +20,8 @@
         <a class="navbar-brand" >
             <img src="./Images/logo.png" height="49vw" width="49vw"  alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button  class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span  class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
@@ -36,14 +36,18 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 imageHolder">
+              <img src="./Images/wd.jpg" class="imageSize"  alt="">
+            </div>
+            <div class="col-12 imageHolder">
+              <img src="./Images/Flutter.jpg" class="imageSize"  alt="">
+            </div>
+            <div class="col-12 imageHolder">
+              <img src="./Images/python.jpg" class="imageSize" alt="">
+            </div>
+            <div class="col-12 imageHolder">  
                 <img src="./Images/ds.jpg" class="imageSize"  alt="">
             </div>
-            <div class="col-12 imageHolder">
-                <img src="./Images/python.jpg" class="imageSize" alt="">
-            </div>
-            <div class="col-12 imageHolder">
-                <img src="./Images/wd.jpg" class="imageSize"  alt="">
-            </div>
+           
             <div class="col-12 imageHolder">
                 <img src="./Images/java.jpg" class="imageSize" alt="">
             </div>
