--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <li class="nav-item mt-3 mt-md-0 ml-md-5">
               <a id="prj" onclick="prjFunc()">Projects</a>
             </li>
+            <li>
+              <hr style="width: 100vw;padding: 1px!important;margin-left: -5vw;margin-top: 5vh;margin-bottom: -1vh;">
+            </li>
           </ul>
         </div>
       </nav>
@@ -187,10 +190,10 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 mt-1">
-            <img src="./Images/ds.jpg" width="100%" height="100%" alt="">
+            <img src="./Images/wd.jpg" width="100%" height="100%" alt="">
           </div>
           <div class="col-12 col-md-6 mt-1">
-            <img src="./Images/wd.jpg" width="100%" height="100%" alt="">
+            <img src="./Images/flutter.jpg" width="100%" height="100%" alt="">
           </div>
         </div>
 
@@ -199,7 +202,7 @@
             <img src="./Images/python.jpg" width="100%" height="100%" alt="">
           </div>
           <div class="col-12 col-md-6 mt-1">
-            <img src="./Images/java.jpg" width="100%" height="92.5%" alt="" class="mt-3">
+            <img src="./Images/ds.jpg" width="100%" height="100%" alt="" class="mt-3">
           </div>
           <a href="./certifications.html" style="color:black;text-decoration: none;" target="_blank" class="mt-2 certificationslink">+ Click to checkout all my certifications</a>
         </div>
