--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li class="nav-item mt-3 mt-md-0 ml-md-5">
               <a id="prj" onclick="prjFunc()">Projects</a>
             </li>
-            <li>
+            <li class="d-block d-md-none">
               <hr style="width: 100vw;padding: 1px!important;margin-left: -5vw;margin-top: 5vh;margin-bottom: -1vh;">
             </li>
           </ul>
@@ -193,7 +193,7 @@
             <img src="./Images/wd.jpg" width="100%" height="100%" alt="">
           </div>
           <div class="col-12 col-md-6 mt-1">
-            <img src="./Images/flutter.jpg" width="100%" height="100%" alt="">
+            <img src="./Images/Flutter.jpg" width="100%" height="100%" alt="">
           </div>
         </div>
 
