--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 
                 <div class="col-6" style="padding-left: 7.5%;" >
                     
-                        <p style="font-size: 3.7vw;font-weight: bold;margin-top: 27%;">Hello,I'm Sagar Parker.</p>
-                        <p style="font-size: 2.3vw;margin-top:-10px"><span style="color: #017CFF"> Full-stack developer</span></p>
+                        <p style="font-size: 3.7vw;font-weight: bold;margin-top: 25%;">Hello,I'm Sagar Parker.</p>
+                        <p style="font-size: 2vw;margin-top:-10px"><span style="color: #017CFF;font-weight:550">Full-stack developer</span> and an aspiring Blockchain developer.</p>
                         <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" style="text-decoration: none;" target="_blank" >
                             <img src="./Images/linkedin-brands.svg" class="mt-3 socialLinks" height="6%" width="6%" alt="">
                         </a>
@@ -202,7 +202,7 @@
             <img src="./Images/python.jpg" width="100%" height="100%" alt="">
           </div>
           <div class="col-12 col-md-6 mt-1">
-            <img src="./Images/ds.jpg" width="100%" height="100%" alt="" class="mt-3">
+            <img src="./Images/ds.jpg" width="100%" height="100%" alt="" >
           </div>
           <a href="./certifications.html" style="color:black;text-decoration: none;" target="_blank" class="mt-5 mt-md-3 certificationslink">+ Click to checkout all my certifications</a>
         </div>
