--- a/certifications.html
+++ b/certifications.html
@@ -57,6 +57,11 @@
             <div class="col-12 imageHolder mb-3 mb-md-0">
                 <img src="./Images/PHP_Certificate-1.jpg" class="imageSize2" alt="">
             </div>
+            <div class="col-12 imageHolder mb-5 mb-md-0">
+              <div style="border: 1px solid rgb(212, 212, 212);" class="ExperienceLetterHolder" >
+                <img src="./Images/Experience.PNG" style="width: 100%;height: 100%;"  alt="">
+              </div>
+            </div>
         </div>
     </div>
 
