Update to the skills and certificate section

--- a/certifications.html
+++ b/certifications.html
@@ -39,6 +39,9 @@
               <img src="./Images/wd.jpg" class="imageSize"  alt="">
             </div>
             <div class="col-12 imageHolder">
+              <img src="./Images/BlockchainCertificate.jpg" class="imageSize"  alt="">
+            </div>
+            <div class="col-12 imageHolder">
               <img src="./Images/Flutter.jpg" class="imageSize"  alt="">
             </div>
             <div class="col-12 imageHolder">
