--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="row">
           <div class="col-12 p-3">
             <p style="font-size: 14vw;font-weight: bold;margin-top: 45%;">Hello,I'm Sagar Parker.</p>
-            <p style="font-size: 8vw;margin-top:-10px"><span style="color: #017CFF;">Full-stack developer</span></p>
+            <p style="font-size: 8vw;margin-top:-10px"><span style="color: #017CFF;">Full-stack Engineer</span></p>
             <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" style="text-decoration: none;" >
               <img src="./Images/linkedin-brands.svg" class="mt-2" height=11%" width="11%" alt="">
             </a>
@@ -153,9 +153,9 @@
               </div>
 
               <div class="col-md-6 col-12 SK" >
-                <h5>UI/UX</h5>
+                <h5>Solidity, Web3</h5>
                 <hr>
-                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='90%'>
+                <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='70%'>
 
               </div>
             </div>
@@ -195,14 +195,15 @@
           <div class="col-12 col-md-6 mt-1">
             <img src="./Images/Flutter.jpg" width="100%" height="100%" alt="">
           </div>
+
         </div>
 
         <div class="row">
           <div class="col-12 col-md-6 mt-1">
             <img src="./Images/python.jpg" width="100%" height="100%" alt="">
           </div>
-          <div class="col-12 col-md-6 mt-1">
-            <img src="./Images/ds.jpg" width="100%" height="100%" alt="" >
+          <div class="col-12 col-md-6 mt-1 p-3 p-md-3" >
+            <img src="./Images/BlockchainCertificate.jpg" width="100%" height="100%" alt="">
           </div>
           <a href="./certifications.html" style="color:black;text-decoration: none;" target="_blank" class="mt-5 mt-md-3 certificationslink">+ Click to checkout all my certifications</a>
         </div>
