Update to the resume section

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <img src="./Images/voting.jpg" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> VoterChain.com </h4>
-                <h5 style="font-weight: 600;">Blockchain</h5>
+                <h5 style="font-weight: 600;">React, Blockchain</h5>
                 <p class="mt-3 mb-3">A decentralized voting system made by implementing Blockchain,Node.js,Socket.io and React.</p>
                 <a href="https://github.com/sagarparker/VoterChain" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
@@ -241,12 +241,12 @@
 
           <div class="col-12 col-md-4">
             <div class="prjCard">
-              <img src="./Images/sentiment1.jpg" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/KrishiGruha.png" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
-                <h4 class="mt-2" style="font-weight: bold;color:#017CFF">Sentiment analysis</h4>
-                <h5 style="font-weight: 600;">NLP - Data Science </h5>
-                <p class="mt-3 mb-3">Detailed sentiment analysis of Reddit posts done with Flask,React and advanced Python libraries for data science .</p>
-                <a href="https://github.com/sagarparker/RedditSentimentAnalysis" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <h4 class="mt-2" style="font-weight: bold;color:#017CFF">KrishiGruha</h4>
+                <h5 style="font-weight: 600;">React Native, Hedera </h5>
+                <p class="mt-3 mb-3">A platform made for users to buy or sell the best agricultural product online with crypto, created using React Native and Hedera.</p>
+                <a href="https://github.com/sagarparker/KrishiGruha" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
