--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item mt-3 mt-md-0 ml-md-4 ">
-              <a id="ske" onclick="skeFunc()">Skills & Education</a>
+              <a id="ske" onclick="skeFunc()">Skills & Experience</a>
             </li>
             <li class="nav-item mt-3 mt-md-0 ml-md-5">
               <a id="crt" onclick="crtFunc()">Certifications</a>
@@ -74,7 +74,7 @@
                 <div class="col-6" style="padding-left: 7.5%;" >
                     
                         <p style="font-size: 3.7vw;font-weight: bold;margin-top: 25%;">Hello,I'm Sagar Parker.</p>
-                        <p style="font-size: 2vw;margin-top:-10px"><span style="color: #017CFF;font-weight:550">Full-stack developer</span> and an aspiring Blockchain developer.</p>
+                        <p style="font-size: 2vw;margin-top:-10px"><span style="color: #017CFF;font-weight:550">Software Engineer</span> and an advocate of decentralized internet.</p>
                         <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" style="text-decoration: none;" target="_blank" >
                             <img src="./Images/linkedin-brands.svg" class="mt-3 socialLinks" height="6%" width="6%" alt="">
                         </a>
@@ -98,7 +98,7 @@
         <div class="row">
           <div class="col-12 p-3">
             <p style="font-size: 14vw;font-weight: bold;margin-top: 45%;">Hello,I'm Sagar Parker.</p>
-            <p style="font-size: 8vw;margin-top:-10px"><span style="color: #017CFF;">Full-stack Engineer</span></p>
+            <p style="font-size: 8vw;margin-top:-10px"><span style="color: #017CFF;">Software Engineer</span></p>
             <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" style="text-decoration: none;" >
               <img src="./Images/linkedin-brands.svg" class="mt-2" height=11%" width="11%" alt="">
             </a>
@@ -125,7 +125,7 @@
               </div>
   
               <div class="col-md-6 col-12 SK" >
-                <h5>Angular / React / React Native</h5>
+                <h5>React / React Native</h5>
                 <hr>
                 <hr style="background-color: #017CFF;margin-top:-31px" align="left" width='75%'>
               </div>
@@ -175,12 +175,12 @@
 
             <div class="row mt-5 " >
               <div class="col-md-6 col-12" >
-                <h4>M.Sc - Computer Science</h4>
-                <h5 style="color:grey">Ramnarain Ruia College ( 2020 - 2022 )</h5>
+                <h4>Software developer intern</h4>
+                <h6 style="color:grey">Frshr technologies ( 06/2020 - 09/2020 )</h6>
               </div>
               <div class="col-md-6 col-12 mt-md-0 mt-5" >
-                <h4>B.Sc - Computer Science</h4>
-                <h5 style="color:grey">Ramnarain Ruia College ( 2017 - 2020 )</h5>
+                <h4>Software Engineer ( Full-stack )</h4>
+                <h6 style="color:grey">Frshr technologies ( 10/2020 - 06/2021 )</h6>
               </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
 
           <div class="col-12 col-md-4 ">
             <div class="prjCard">
-              <img src="./Images/ws.JPG" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/ws.JPG" width="100%" height="190px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> WorkSpace.com </h4>
                 <a href="https://wrkspace.herokuapp.com/workspace" target="_blank"><img style="margin-top: -65px;margin-left: 190px;" src="./Images/link-solid.svg" width="20px" height="20px" alt=""></a>
@@ -229,7 +229,7 @@
 
           <div class="col-12 col-md-4">
             <div class="prjCard">
-              <img src="./Images/voting.jpg" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/voting.jpg" width="100%" height="190px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> VoterChain.com </h4>
                 <h5 style="font-weight: 600;">React, Blockchain</h5>
@@ -241,7 +241,7 @@
 
           <div class="col-12 col-md-4">
             <div class="prjCard">
-              <img src="./Images/KrishiGruha.png" width="100%" height="185px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/KrishiGruha.png" width="100%" height="190px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF">KrishiGruha</h4>
                 <h5 style="font-weight: 600;">React Native, Hedera </h5>
