Update to the nav bar

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF">KrishiGruha</h4>
                 <h5 style="font-weight: 600;">React Native, Hedera </h5>
-                <p class="mt-3 mb-3">A platform made for users to buy or sell the best agricultural product online with crypto, created using React Native and Hedera.</p>
+                <p class="mt-3 mb-3">A platform made for users to buy or sell agricultural product online with crypto, created using React Native and Hedera.</p>
                 <a href="https://github.com/sagarparker/KrishiGruha" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
