--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:title" content="Sagar Parker" />
+    <meta property="og:image" content="https://sagarparker.github.io/Images/mainDiv.svg">
     <link rel="icon" href="./Images/logo.png">
     <title>Sagar Parker</title>
 
