--- a/index.html
+++ b/index.html
@@ -83,9 +83,15 @@
                         <a href="https://github.com/sagarparker" target="_blank" style="text-decoration: none;">
                             <img src="./Images/github-brands.svg" class="mt-3 ml-3 socialLinks" height="6%" width="6%" alt="">
                         </a>
-                        <a href="./Resume.pdf" download="Sagar Parker Resume" style="text-decoration: none;">
-                            <img src="./Images/file-solid.svg" class="mt-3 ml-3 socialLinks" height="5%" width="5%" alt="">
-                        </a>
+                      
+
+                        <a href="https://www.hackerrank.com/sagar8parker" style="text-decoration: none;">
+                          <img src="./Images/hackerrank.svg" class="mt-3 ml-3 socialLinks" height="6%" width="6%" alt="">
+                      </a>
+
+                      <a href="./Resume.pdf" download="Sagar Parker Resume" style="text-decoration: none;">
+                        <img src="./Images/file-solid.svg" class="mt-3 ml-3 socialLinks" height="4.8%" width="4.8%" alt="">
+                    </a>
                         
                 </div>
                 <div class="col-5">
@@ -107,9 +113,16 @@
             <a href="https://github.com/sagarparker" style="text-decoration: none;">
                 <img src="./Images/github-brands.svg" class="mt-2 ml-4" height="12%" width="12%" alt="">
             </a>
+
+            <a href="https://www.hackerrank.com/sagar8parker" style="text-decoration: none;">
+              <img src="./Images/hackerrank.svg" class="mt-2 ml-4" height="11.5%" width="11.5%" alt="">
+            </a>
+
             <a href="./Resume.pdf" download="Sagar Parker Resume" style="text-decoration: none;">
                 <img src="./Images/file-solid.svg" class="mt-2 ml-4" height="8.5%" width="8.5%" alt="">
             </a>
+
+
 
           </div>
         </div>
