--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </a>
                       
 
-                        <a href="https://www.hackerrank.com/sagar8parker" style="text-decoration: none;">
+                        <a href="https://www.hackerrank.com/sagar8parker" target="_blank" style="text-decoration: none;">
                           <img src="./Images/hackerrank.svg" class="mt-3 ml-3 socialLinks" height="6%" width="6%" alt="">
                       </a>
 
@@ -114,7 +114,7 @@
                 <img src="./Images/github-brands.svg" class="mt-2 ml-4" height="12%" width="12%" alt="">
             </a>
 
-            <a href="https://www.hackerrank.com/sagar8parker" style="text-decoration: none;">
+            <a href="https://www.hackerrank.com/sagar8parker" target="_blank" style="text-decoration: none;">
               <img src="./Images/hackerrank.svg" class="mt-2 ml-4" height="11.5%" width="11.5%" alt="">
             </a>
 
