--- a/index.html
+++ b/index.html
@@ -231,13 +231,12 @@
 
           <div class="col-12 col-md-4 ">
             <div class="prjCard">
-              <img src="./Images/ws.JPG" width="100%" height="190px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
+              <img src="./Images/Cover.png" width="100%" height="190px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" alt="">
               <div class="cardCont">
-                <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> WorkSpace.com </h4>
-                <a href="https://wrkspace.herokuapp.com/workspace" target="_blank"><img style="margin-top: -65px;margin-left: 190px;" src="./Images/link-solid.svg" width="20px" height="20px" alt=""></a>
-                <h5 style="font-weight: 600;margin-top: -24px;">Node.js web app</h5>
-                <p class="mt-3 mb-3">A website made for freelancers to collaborate and work on exciting projects as a team.</p>
-                <a href="https://github.com/sagarparker/WorkSpace__Node.js" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
+                <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> Collective </h4>
+                <h5 style="font-weight: 600;">Flutter, Node.js, Ethereum</h5>
+                <p class="mt-3 mb-3">An equity crowdfunding app managed with smart contracts that allows users to invest in projects with crypto in return of equity.</p>
+                <a href="https://github.com/sagarparker/Collective" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
           </div>
@@ -248,7 +247,7 @@
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> VoterChain.com </h4>
                 <h5 style="font-weight: 600;">React, Blockchain</h5>
-                <p class="mt-3 mb-3">A decentralized voting system made by implementing Blockchain,Node.js,Socket.io and React.</p>
+                <p class="mt-3 mb-3">A decentralized voting system created by implementing core blockchain concepts, React and Node.js.</p>
                 <a href="https://github.com/sagarparker/VoterChain" style="color: black;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" width="35vw" height="35vh" alt=""> View github repository</a>
               </div>
             </div>
