--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               <div class="cardCont">
                 <h4 class="mt-2" style="font-weight: bold;color:#017CFF"> Collective </h4>
                 <h5 style="font-weight: 600;">Flutter, Node.js, Ethereum</h5>
-                <p class="mt-3 mb-3">An equity crowdfunding app managed with smart contracts that allows users to invest in projects with crypto in return of equity.</p>
+                <p class="mt-3 mb-3">An equity crowdfunding app managed with smart contracts that allows users to invest in projects with crypto.</p>
                 <a href="https://github.com/sagarparker/Collective" style="color: #017CFF;text-decoration:none;font-size:1.2em" ><img src="./Images/github-brands.svg" style="margin-bottom: 6px;margin-right: 3px;" width="25vw" height="25vh" alt=""> View github repository</a>
               </div>
             </div>
