Changes to the main description

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="col-6" style="padding-left: 7.5%;" >
                     
                         <p style="font-size: 3.7vw;font-weight: bold;margin-top: 25%;">Hello,I'm Sagar Parker.</p>
-                        <p style="font-size: 2vw;margin-top:-10px"><span style="color: #017CFF;font-weight:550">Software Engineer</span> and an advocate of decentralized internet.</p>
+                        <p style="font-size: 2vw;margin-top:-10px"><span style="color: #017CFF;font-weight:550">Software Engineer</span> and an advocate of a decentralized internet.</p>
                         <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3" style="text-decoration: none;" target="_blank" >
                             <img src="./Images/linkedin-brands.svg" class="mt-3 socialLinks" height="6%" width="6%" alt="">
                         </a>
