Update to the footer

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 <footer class="page-footer font-small d-none d-md-block">
 
 <center>
-  <p>Contact : +91 9137427570 <span style="padding-left: 200px;">Email : sagar8parker@gmail.com</span></p>
+  <p>Email : sagar8parker@gmail.com</p>
 </center>
 
 
@@ -284,9 +284,7 @@
 
 <footer class="page-footer font-small d-block d-md-none">
 
-  <center>
-    <p>Contact : +91 9137427570</p>
-  </center>
+  
   <center>
     <p>Email : sagar8parker@gmail.com</p>
   </center>
