Update to the exp section

--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
 
             <div class="row mt-5 " >
               <div class="col-md-6 col-12" >
-                <h4>Software developer intern</h4>
-                <h6 style="color:grey">Frshr technologies ( 06/2020 - 09/2020 )</h6>
+                <h4>Software Engineer (Full-stack)</h4>
+                <h6 style="color:grey">Frshr technologies ( 06/2020 - 06/2021 )</h6>
               </div>
               <div class="col-md-6 col-12 mt-md-0 mt-5" >
                 <h4>Software Engineer (Full-stack)</h4>
-                <h6 style="color:grey">Frshr technologies ( 10/2020 - 06/2021 )</h6>
+                <h6 style="color:grey">Marlin Protocol ( 12/2021 - Present )</h6>
               </div>
             </div>
         </div>
