Update for the navbar

--- a/index.html
+++ b/index.html
@@ -35,13 +35,9 @@
     </style>
 </head>
 <body>
-
-  <!-- NAVBAR -->
     
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white" >
-      <a class="navbar-brand" >
-          <img src="./Images/logo.png" height="49vw" width="49vw"  alt="">
-      </a>
+      <img src="./Images/logo.png" class="nav-image"  alt="">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,9 +51,6 @@
           </li>
           <li class="nav-item ">
             <a id="prj" onclick="prjFunc()">Projects</a>
-          </li>
-          <li class="d-block d-md-none">
-            <hr style="width: 100vw;padding: 1px!important;margin-left: -5vw;margin-top: 5vh;margin-bottom: -1vh;">
           </li>
         </ul>
       </div>
