Added leetcode link

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                           <a href="https://github.com/sagarparker" target="_blank" style="text-decoration: none;">
                             <img src="./Images/github-brands.svg" alt="">
                           </a>
-                          <a href="https://www.hackerrank.com/sagar8parker" target="_blank" style="text-decoration: none;">
-                            <img src="./Images/hackerrank.svg" alt="">
+                          <a href="https://leetcode.com/u/sagar8parker" target="_blank" style="text-decoration: none;">
+                            <img src="./Images/leetcode.svg" alt="" width="42px" height="42px" style="margin-left: -4px;">
                           </a>
                         </div>
 
@@ -100,8 +100,8 @@
                 <img src="./Images/github-brands.svg" class="mt-2 ml-4" height="12%" width="12%"/>
             </a>
 
-            <a href="https://www.hackerrank.com/sagar8parker" target="_blank" style="text-decoration: none;">
-              <img src="./Images/hackerrank.svg" class="mt-2 ml-4" height="12%" width="12%" alt="">
+            <a href="https://leetcode.com/u/sagar8parker" target="_blank" style="text-decoration: none;">
+              <img src="./Images/leetcode.svg" class="mt-2" height="12%" width="12%" alt="" style="margin-left: 22px;">
             </a>
 
           </div>
