--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="col-12 col-md-6 mt-1">
             <img src="./Images/python.jpg" width="100%" height="100%" alt="">
           </div>
-          <div class="col-12 col-md-6 mt-1 p-3 p-md-3" >
+          <div class="col-12 col-md-6 mt-1 p-md-0" >
             <img src="./Images/wd.jpg" width="100%" height="100%" alt="">
           </div>
           <a href="./certifications.html" style="color:black;text-decoration: none;" target="_blank" class="mt-5 mt-md-3 certificationslink">+ Click to checkout all my certifications</a>
