--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
             <div class="row">
                 
                 <div class="col-6 main-div" style="padding-left: 7.5%;" >              
-                        <p style="font-size: 3.2vw;font-weight: bold;">Hello,I'm Sagar Parker,</br>
-                           aka Infy8.</p>
+                        <p style="font-size: 3.2vw;font-weight: bold;">Hello,I'm Sagar Parker.</p>
                         <p style="font-size: 2vw;margin-top:-10px"><span style="color: #017CFF;font-weight:550">Software Engineer</span> and an advocate of a decentralized internet.</p>
                         <div class="socialLinksRow">
                           <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3/" style="text-decoration: none;" target="_blank" >
@@ -89,9 +88,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 p-3">
-            <p style="font-size: 14vw;font-weight: bold;margin-top: 37%;">Hello,I'm Sagar Parker, </br>
-              aka Infy8.
-            </p>
+            <p style="font-size: 14vw;font-weight: bold;margin-top: 37%;">Hello,I'm Sagar Parker.</p>
             <p style="font-size: 8vw;margin-top:-10px"><span style="color: #017CFF;">Software Engineer</span></p>
             <a href="https://www.linkedin.com/in/sagar-parker-07561b1a3/" style="text-decoration: none;" >
               <img src="./Images/linkedin-brands.svg" class="mt-2" height=11%" width="11%" alt="">
